add_subdirectory(clear)
add_subdirectory(triangle)
add_subdirectory(texturing)
add_subdirectory(varyings)
add_subdirectory(depthTest)
add_subdirectory(stencilTest)
add_subdirectory(indexedTriangle)
add_subdirectory(blending)
add_subdirectory(depthTex)
add_subdirectory(MSAA)
add_subdirectory(HDR)
add_subdirectory(ETC)
add_subdirectory(query)
add_subdirectory(mipmapping)
add_subdirectory(CPAtest)
add_subdirectory(cubemapping)
add_subdirectory(attribTest)
add_subdirectory(clearTest)
add_subdirectory(inputTest)
add_subdirectory(mintest)
add_subdirectory(FifoTest)
add_subdirectory(cubeMipmapping)
add_subdirectory(multithreading)